--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>UNDP Data Platform</title>
-    <link rel="stylesheet" href="https://use.typekit.net/jtg8msg.css" />
+    <link rel="stylesheet" href="https://use.typekit.net/jtg8msg.css" crossorigin="anonymous"/>
+    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/mainStyleSheet.css" crossorigin="anonymous">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
